crates/model-catalog/src/snapshots/model_catalog__render__tests__snapshot_deepseek_v4_flash_inferenceservice.snap
---
source: crates/model-catalog/src/render.rs
expression: value
---
apiVersion: serving.kserve.io/v1beta1
kind: InferenceService
metadata:
  annotations:
    homelab.saavylab.dev/model-id: deepseek-ai/DeepSeek-V4-Flash
    homelab.saavylab.dev/plan-digest: a50bf343014ab53d5066f601d0da4cc3e7e341ee8249005adc529e7307fdccba
  labels:
    app.kubernetes.io/managed-by: homelab-mcp
    homelab.saavylab.dev/recipe-id: deepseek-v4-flash
  name: deepseek-v4-flash
  namespace: ai
spec:
  predictor:
    containers:
      - args:
          - "--model=/mnt/nas/models/deepseek-ai/DeepSeek-V4-Flash"
          - "--served-model-name=deepseek-v4-flash"
          - "--host=0.0.0.0"
          - "--port=8080"
          - "--enable-auto-tool-choice"
        command:
          - python3
          - "-m"
          - vllm.entrypoints.openai.api_server
        env:
          - name: HF_HUB_OFFLINE
            value: "1"
          - name: TRANSFORMERS_OFFLINE
            value: "1"
        image: "vllm/vllm-openai:latest"
        name: kserve-container
        ports:
          - containerPort: 8080
            name: http
            protocol: TCP
        resources:
          limits:
            cpu: "2"
            memory: 16Gi
            nvidia.com/gpu: "1"
          requests:
            cpu: "2"
            memory: 16Gi
            nvidia.com/gpu: "1"
        volumeMounts:
          - mountPath: /mnt/nas/models
            name: nas-models
            readOnly: true
    maxReplicas: 1
    minReplicas: 1
    nodeSelector:
      nvidia.com/gpu.product: NVIDIA-GB10
    tolerations:
      - effect: NoSchedule
        key: nvidia.com/gpu
        operator: Equal
        value: "true"
      - effect: NoExecute
        key: nvidia.com/gpu
        operator: Equal
        value: "true"
    volumes:
      - hostPath:
          path: /mnt/nas/models
          type: Directory
        name: nas-models
