crates/model-catalog/src/snapshots/model_catalog__render__tests__snapshot_qwen3_8b_inferenceservice.snap
---
source: crates/model-catalog/src/render.rs
expression: value
---
apiVersion: serving.kserve.io/v1beta1
kind: InferenceService
metadata:
  annotations:
    homelab.saavylab.dev/model-id: Qwen/Qwen3-8B
    homelab.saavylab.dev/plan-digest: 2f1ab678ff4eaed4e3a317b10ab1427243cb85a76d75f6549f3ad88b3d31836b
  labels:
    app.kubernetes.io/managed-by: homelab-mcp
    homelab.saavylab.dev/recipe-id: qwen3-8b
  name: qwen3-8b
  namespace: ai
spec:
  predictor:
    containers:
      - args:
          - "--model=/mnt/nas/models/Qwen/Qwen3-8B"
          - "--served-model-name=qwen3-8b"
          - "--host=0.0.0.0"
          - "--port=8080"
          - "--enable-auto-tool-choice"
          - "--tool-call-parser=hermes"
        command:
          - python3
          - "-m"
          - vllm.entrypoints.openai.api_server
        env:
          - name: HF_HUB_OFFLINE
            value: "1"
          - name: TRANSFORMERS_OFFLINE
            value: "1"
        image: "vllm/vllm-openai:latest"
        name: kserve-container
        ports:
          - containerPort: 8080
            name: http
            protocol: TCP
        resources:
          limits:
            cpu: "2"
            memory: 16Gi
            nvidia.com/gpu: "1"
          requests:
            cpu: "2"
            memory: 16Gi
            nvidia.com/gpu: "1"
        volumeMounts:
          - mountPath: /mnt/nas/models
            name: nas-models
            readOnly: true
    maxReplicas: 1
    minReplicas: 1
    nodeSelector:
      nvidia.com/gpu.product: NVIDIA-GB10
    tolerations:
      - effect: NoSchedule
        key: nvidia.com/gpu
        operator: Equal
        value: "true"
      - effect: NoExecute
        key: nvidia.com/gpu
        operator: Equal
        value: "true"
    volumes:
      - hostPath:
          path: /mnt/nas/models
          type: Directory
        name: nas-models
